Fixed create build page and build page item alignments

--- a/Client/src/css/artifactcarddisplay.css
+++ b/Client/src/css/artifactcarddisplay.css
@@ -1,3 +1,19 @@
+.artifact-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.artifact-container::-webkit-scrollbar-track {
+  background: #3b3e86;
+}
+
+.artifact-container::-webkit-scrollbar-thumb {
+  background: rgb(167, 179, 255);
+}
+
+.artifact-container::-webkit-scrollbar-thumb:hover {
+  background: rgb(156, 138, 255);
+}
+
 .artifact-display img:hover {
   box-shadow: inset 0 -8em 8em rgba(109, 109, 109, 0.1), 0 0 0 0px,
     0.8em 0.8em 1em rgba(0, 0, 0, 0.3);
@@ -26,4 +42,11 @@
 .artifact-display h3 {
   text-align: center;
   inline-size: 100px;
+}
+
+@media only screen and (max-width: 990px) {
+  .artifact-display {
+    transform: translateY(35px);
+    margin-bottom: 16px;
+  }
 }
