--- a/Client/src/css/buildpage.css
+++ b/Client/src/css/buildpage.css
@@ -1,7 +1,7 @@
 .buildpage-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -71,7 +71,7 @@
 .weapon-container {
   border: 0px solid;
   border-radius: 10px;
-  background-color: #2b1766;
+  background-color: #28175a;
   width: 710px;
   height: 150px;
   overflow: auto;
@@ -79,7 +79,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 0px 55px;
+  gap: 0px 65px;
   margin: -10px 20px 20px 20px;
   padding: 20px 20px 20px 50px;
   font-size: 10px;
@@ -96,7 +96,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 0px 65px;
+  gap: 46px 65px;
   margin: -10px 20px 20px 20px;
   padding: 20px 20px 20px 50px;
   font-size: 10px;
@@ -121,7 +121,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 0px 65px;
+  gap: 16px 65px;
   margin: -10px 20px 20px 20px;
   padding: 20px 20px 20px 50px;
   font-size: 10px;
