--- a/Client/src/css/comment.css
+++ b/Client/src/css/comment.css
@@ -3,9 +3,9 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
-  width: 100%;
+
   overflow: hidden;
-  height: 140px;
+
   color: rgb(255, 255, 255);
   border: 0px solid;
   border-radius: 10px;
