--- a/Client/src/css/weaponcard.css
+++ b/Client/src/css/weaponcard.css
@@ -109,7 +109,7 @@ body {
   background-color: #534981;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 0px,
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  margin-top: -30px;
+  margin-top: -45px;
 }
 
 .menu-tag {
@@ -141,5 +141,16 @@ body {
     margin-right: -2px;
     overflow: auto;
     gap: 10px 4px;
+  }
+  .weapon img {
+    display: block;
+    width: 106px;
+    height: 106px;
+    border: 0px solid;
+    border-radius: 10px;
+    background-color: #534981;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 0px,
+      0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    margin-top: -60px;
   }
 }
